Compiler Bouw/compiler/test/basic/stephen/fail/overflow.cvc
// Should produce a parser error because the integer is too big.

#include "civic.h"

export int main() {
    int a = 10000000000000000000;
    return 0;
}
